[tool.poetry]
name = "miio_gateway"
version = "1.4.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
homeassistant = "~=0.110.4"
voluptuous = "~=0.11.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
